--- a/_src/index.html
+++ b/_src/index.html
@@ -2,18 +2,27 @@
 layout: base.njk
 ---
 
-<h1>Balatro Gold Sticker Tracker</h1>
+<h1>Balatro <span>Gold Sticker</span> Tracker</h1>
 
 <div class="space-between stack">
   <div class="flex">
     <div class="button-group">
-      <button type="button" data-active>
+      <button type="button" data-view="grid" data-active>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon"><title>Grid Layout</title><path d="M11 4v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2ZM4 4v5h5V4H4Zm18 0v5a2 2 0 0 1-2 2h-5a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2Zm-7 0v5h5V4h-5Zm7 11v5a2 2 0 0 1-2 2h-5a2 2 0 0 1-2-2v-5c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2Zm-7 0v5h5v-5h-5Zm-4 0v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-5c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2Zm-7 0v5h5v-5H4Z"/></svg>
       </button>
-      <button type="button">
+      <button type="button" data-view="list">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon"><title>List Layout</title><path d="M11 4v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2ZM4 4v5h5V4H4Zm7 11v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-5c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2Zm-7 0v5h5v-5H4ZM14 5a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2h-7Zm0 5a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2h-7Zm0 6a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2h-7Zm0 5a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2h-7Z"/></svg>
       </button>
     </div>
+    <div class="button-group">
+      <button type="button" data-order="alpha" data-active>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon"><title>Alphabetical Order</title><path d="m6.3 20.7-4-4a1 1 0 0 1 1.4-1.4L6 17.58V4a1 1 0 0 1 2 0v13.59l2.3-2.3a1 1 0 0 1 1.4 1.42l-4 4a1 1 0 0 1-1.4 0ZM14 10V6.5C14 4.58 15.58 3 17.5 3S21 4.58 21 6.5V10a1 1 0 0 1-2 0V9h-3v1a1 1 0 0 1-2 0Zm5-3v-.5c0-.82-.68-1.5-1.5-1.5S16 5.68 16 6.5V7h3Zm-4 8a1 1 0 0 1 0-2h5a1 1 0 0 1 .77 1.64L17.14 19H20a1 1 0 0 1 0 2h-5a1 1 0 0 1-.77-1.64L17.86 15H15Z"/></svg>
+      </button>
+      <button type="button" data-order="game">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon"><title>Numerical Order</title><path d="m6.3 20.7-4-4a1 1 0 0 1 1.4-1.4L6 17.58V4a1 1 0 0 1 2 0v13.59l2.3-2.3a1 1 0 0 1 1.4 1.42l-4 4a1 1 0 0 1-1.4 0ZM16 19v-4h-1a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v5h1a1 1 0 0 1 0 2h-4a1 1 0 0 1 0-2h1Zm4-15v6a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1Zm-2 1h-2v4h2V5Z"/></svg>
+      </button>
+    </div>
+
     <div id="joker-filter">
       <label for="filter-jokers" id="filter-help" class="sr-only">Filter jokers</label>
       <input
@@ -37,7 +46,7 @@ layout: base.njk
 
 <section>
 {% for joker in jokers %}
-  <label for="{{ joker.name | slug }}">
+  <label for="{{ joker.name | slug }}" data-order="{{ joker.order }}" data-name="{{ joker.name }}" data-slug="{{ joker.name | slug }}">
     <input type="checkbox" name="{{ joker.name | slug }}" id="{{ joker.name | slug }}">
     <div class="joker-img">
       <img src="/images/{% if joker.name === "Hologram" %}{{ joker.name | slug }}.gif{% else %}{{ joker.name | slug }}.png{% endif %}" alt="{{ joker.name }}" width="142" height="190">
