Add dedicated classes for toggle groups

--- a/_src/index.html
+++ b/_src/index.html
@@ -6,7 +6,7 @@ layout: base.njk
 
 <div class="space-between stack">
   <div class="flex">
-    <div class="button-group">
+    <div class="button-group view-toggle">
       <button type="button" data-view="grid" data-active>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon"><title>Grid Layout</title><path d="M11 4v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2ZM4 4v5h5V4H4Zm18 0v5a2 2 0 0 1-2 2h-5a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2Zm-7 0v5h5V4h-5Zm7 11v5a2 2 0 0 1-2 2h-5a2 2 0 0 1-2-2v-5c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2Zm-7 0v5h5v-5h-5Zm-4 0v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-5c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2Zm-7 0v5h5v-5H4Z"/></svg>
       </button>
@@ -14,7 +14,7 @@ layout: base.njk
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon"><title>List Layout</title><path d="M11 4v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2ZM4 4v5h5V4H4Zm7 11v5a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-5c0-1.1.9-2 2-2h5a2 2 0 0 1 2 2Zm-7 0v5h5v-5H4ZM14 5a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2h-7Zm0 5a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2h-7Zm0 6a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2h-7Zm0 5a1 1 0 0 1 0-2h7a1 1 0 0 1 0 2h-7Z"/></svg>
       </button>
     </div>
-    <div class="button-group">
+    <div class="button-group order-toggle">
       <button type="button" data-order="alpha" data-active>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon"><title>Alphabetical Order</title><path d="m6.3 20.7-4-4a1 1 0 0 1 1.4-1.4L6 17.58V4a1 1 0 0 1 2 0v13.59l2.3-2.3a1 1 0 0 1 1.4 1.42l-4 4a1 1 0 0 1-1.4 0ZM14 10V6.5C14 4.58 15.58 3 17.5 3S21 4.58 21 6.5V10a1 1 0 0 1-2 0V9h-3v1a1 1 0 0 1-2 0Zm5-3v-.5c0-.82-.68-1.5-1.5-1.5S16 5.68 16 6.5V7h3Zm-4 8a1 1 0 0 1 0-2h5a1 1 0 0 1 .77 1.64L17.14 19H20a1 1 0 0 1 0 2h-5a1 1 0 0 1-.77-1.64L17.86 15H15Z"/></svg>
       </button>
