Add sound toggle and info modal

--- a/_src/index.html
+++ b/_src/index.html
@@ -2,6 +2,42 @@
 layout: base.njk
 ---
 
+<div class="floating-buttons">
+  <button type="button" class="ghost-button" id="sfx-toggle" aria-pressed="false" aria-label="Sound on">
+    <svg class="icon">
+      <use xlink:href="#sound-on"></use>
+    </svg>
+  </button>
+  <button type="button" class="ghost-button" onclick="showDialog('dialog')">
+    <svg class="icon">
+      <use xlink:href="#info"></use>
+    </svg>
+  </button>
+</div>
+
+<dialog closedby="any" id="dialog">
+  <form method="dialog" style="position: absolute; top: .5rem; right: .5rem;">
+    <button class="ghost-button">✕</button>
+  </form>
+
+  <h3>What the heck is this thing?</h3>
+
+  <p>Arguably the hardest achievement to get in the game <a href="https://www.playbalatro.com/">Balatro</a> is <strong>Completionist++</strong>, which requires you to beat <mark>Gold Stake</mark> with all 150 jokers. While you can track this in the game, I thought it would be useful to track outside the game.</p>
+
+  <p>You can click each joker to add a <mark>gold sticker</mark> to it. (If the sound of me making pop noises gets annoying, there's a mute button in the upper-right.)</p>
+
+  <p>You can sort the jokers alphabetically or in the order they appear in the Collections menu in the game. You can also filter the list down if you're looking for a specific joker. Clicking the reset button will remove the gold stickers from all jokers.</p>
+
+  <p>I hope you find this useful!</p>
+
+  <p><strong>Mike Aparicio</strong><br>
+    <a href="https://bsky.app/profile/peruvianidol.com">@peruvianidol.com</a><br>
+    <a href="https://mikeaparicio.com">mikeaparicio.com</a></p>
+  
+  <p class="text-sm">Built with <a href="https://11ty.dev">Eleventy</a>. Icons by <a href="https://lucide.dev/">Lucide</a>.</p>
+
+</dialog>
+
 <h1>Balatro <span>Gold Sticker</span> Tracker</h1>
 
 <div class="space-between stack">
